# enz-rxn-data

./: .gitattributes  .gitignore  README.md  calc_thermo.py  chebi_mols_test.ipynb  check_known_files.ipynb  check_reaction_mapping.ipynb  combine_rhea_uniprot.py  convert_known.ipynb  dative_cycle_issue.ipynb  distill_mech_labeled_reactions.py  download_mcsa.py  enz_rxn_dataframe.py  examine_levin_rules.ipynb  examine_rc_plus_0_rules.ipynb  explore_mechanism.ipynb  fill_missing_mcsa_mols.py  foo.ipynb  kc_convert.json  kr_convert.json  label_mechanistic_subgraphs.py  map.sh  map_mech_labeled_reactions copy.py  map_mech_labeled_reactions.py  map_pathway_level_reactions.py  pyproject.toml  resolve.sh  resolve_multiple_mappings.py  scrape_mcsa.py  spot_check_distilled_mech_rxns.ipynb  spot_check_mech_label.ipynb  standardize_bkms.py  submit.sh  test.mrv  test_neutralizer.ipynb  uniquify_min_rules.py  uniquify_ni_rules.py
artifacts/: 250715_reaction_data_size.xlsx
artifacts/rules/: levin_no_stereo_rules.csv  mechanistic_reaction_rules.csv  mechinferred_dt_069_rules_before_2015.csv  mechinferred_dt_112_rules.csv  mechinferred_dt_13_rules.csv  mechinferred_dt_15_rules.csv  mechinferred_dt_224_rules.csv  mechinferred_dt_91_rules.csv  mechinferred_dt_932_rules_before_2015.csv  mechinferred_dt_956_rules.csv  mechinferred_dt_961_rules_before_2015_direct_mcsa_only.csv  mechinferred_dt_98_rules.csv  mechinformed_rules.csv  mechinformed_rules_before_2015.csv  min_rules.csv  rc_plus_0_rules_before_2015.csv  rc_plus_1_rules.csv  rc_plus_1_rules_before_2015.csv  rc_plus_2_rules_before_2015.csv  rdchiral_rules.csv  rdchiral_rules_before_2015.csv  retrobiocat_rules.csv
conf/: calc_thermo.yaml  combine_rhea_uniprot.yaml  distill_mech_labeled_reactions.yaml  fill_mcsa_mols.yaml  label_mechanistic_subgraphs.yaml  map_mech_labeled_reactions.yaml  map_pathway_level_reactions.yaml  mcsa_pull.yaml  resolve_multiple_mappings.yaml  standardize_bkms.yaml  uniquify_min_rules.yaml  uniquify_ni_rules.yaml
conf/filepaths/: filepaths.yaml
conf/mapping_resolver/: largest_subgraph.yaml  min_rule.yaml
data/interim/: mapped_reactions.parquet
data/raw/: ChEBI_lite_3star.sdf  (+1 more)
src/: schemas.py
(+5714 files in other folders)
